publicação do aplicativo

--- a/src/views/cliente.html
+++ b/src/views/cliente.html
@@ -1,100 +1,72 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela Cadastro de Clientes</title>
-    <!-- Bootstrap -->
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
-    <!-- CSS personalizado -->
     <link rel="stylesheet" href="../public/css/style.css">
-    <!-- impedir a execução de scripts externos ou não autorizados -->
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
 </head>
 
 <body>
     <div class="container">
         <form id="frmClient" class="mt-2 row g-3">
-            <!-- Buscar cliente -->
             <div class="col-md-6">
                 <input type="text" class="form-control" id="searchClient" maxlength="30" spellcheck="false">
             </div>
             <div class="col-md-4">
                 <button type="button" class="btn btn-primary" id="btnRead" onclick="buscarCliente()">Buscar</button>
             </div>
-
-            <!-- Linha -->
             <hr class="mt-4 border border-primary border -1">
-
-            <!-- Id do cliente (oculto) -->
             <input type="text" id="idClient">
-
-            <!-- Nome -->
             <div class="col-md-8">
                 <label for="inputNameClient" class="form-label">Nome Completo</label>
                 <input type="text" class="form-control" id="inputNameClient" spellcheck="false" required maxlength="26">
             </div>
-
-            <!-- CPF -->
             <div class="col-md-4">
                 <label for="inputCPFClient" class="form-label">CPF/CNPJ</label>
-                <input type="text" class="form-control" id="inputCPFClient" spellcheck="false" maxlength="15" onblur="validarCPF()" required>
+                <input type="text" class="form-control" id="inputCPFClient" spellcheck="false" maxlength="15"
+                    onblur="validarCPF()" required>
             </div>
-
-            <!-- Email -->
             <div class="col-md-6">
                 <label for="inputEmailClient" class="form-label">E-mail</label>
                 <input type="email" class="form-control" id="inputEmailClient" spellcheck="false" maxlength="30">
             </div>
-
-            <!-- Telefone -->
             <div class="col-md-4">
                 <label for="inputPhoneClient" class="form-label">Telefone</label>
                 <input type="text" class="form-control" id="inputPhoneClient" spellcheck="false" maxlength="15"
                     required>
             </div>
-
-            <!-- CEP -->
             <div class="col-md-2">
                 <label for="inputCEPClient" class="form-label">CEP</label>
                 <input type="text" class="form-control" id="inputCEPClient" spellcheck="false" maxlength="9" required
                     onblur="buscarCEP()">
             </div>
-
-            <!-- Logradouro -->
             <div class="col-md-6">
                 <label for="inputAddressClient" class="form-label">Logradouro</label>
                 <input type="text" class="form-control" id="inputAddressClient" spellcheck="false" maxlength="30"
                     required>
             </div>
-
-            <!-- Número -->
             <div class="col-md-3">
                 <label for="inputNumberClient" class="form-label">Número</label>
                 <input type="text" class="form-control" id="inputNumberClient" spellcheck="false" maxlength="5"
                     required>
             </div>
-
-            <!-- Complemento -->
             <div class="col-md-3">
                 <label for="inputComplementClient" class="form-label">Complemento</label>
                 <input type="text" class="form-control" id="inputComplementClient" spellcheck="false" maxlength="12">
             </div>
-
-            <!-- Bairro -->
             <div class="col-md-5">
                 <label for="inputNeighborhoodClient" class="form-label">Bairro</label>
                 <input type="text" class="form-control" id="inputNeighborhoodClient" spellcheck="false" maxlength="30"
                     required>
             </div>
-
-            <!-- Cidade -->
             <div class="col-md-4">
                 <label for="inputCityClient" class="form-label">Cidade</label>
                 <input type="text" class="form-control" id="inputCityClient" spellcheck="false" maxlength="30" required>
             </div>
-
-            <!-- UF -->
             <div class="col-md-3">
                 <label for="inputUFClient" class="form-label">UF</label>
                 <select class="form-select" id="inputUFClient" name="UF" required>
@@ -128,8 +100,6 @@
                     <option value="TO">TO - Tocantins</option>
                 </select>
             </div>
-
-            <!-- Botões -->
             <div class="mt-5">
                 <button type="submit" class="btn btn-success" id="btnCreate">Adicionar</button>
                 <button type="submit" class="btn btn-warning" id="btnUpdate">Editar</button>
@@ -138,10 +108,7 @@
             </div>
         </form>
     </div>
-
-    <!-- Bootstrap -->
     <script src="../public/js/bootstrap.min.js"></script>
-    <!-- renderizador -->
     <script src="rendererCliente.js"></script>
 </body>
 
