--- a/src/views/os.html
+++ b/src/views/os.html
@@ -5,78 +5,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ordem de Serviço</title>
-    <!-- Bootstrap -->
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
-    <!-- CSS personalizado -->
     <link rel="stylesheet" href="../public/css/style.css">
-    <!-- impedir a execução de scripts externos ou não autorizados -->
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
 </head>
 
 <body>
     <div class="container">
         <form class="mt-1 row g-3" id="frmOS">
-            <!-- OS -->
             <div class="col-md-4">
                 <label class="form-label">Nº da Ordem</label>
                 <input type="text" class="form-control" id="inputOS" disabled>
             </div>
-
-            <!-- Data -->
             <div class="col-md-3">
                 <label class="form-label">Data Entrada</label>
                 <input type="text" class="form-control" id="inputData" disabled>
             </div>
-
-            <!--CPF--> 
             <div class="col-md-3 ">
                 <label for="inputCPFClient" class="form-label">CPF/CNPJ</label>
                 <input type="text" class="form-control" id="inputCPFClient" spellcheck="false" maxlength="15" disabled>
-            </div> 
-
-            <!-- Buscar cliente -->
+            </div>
             <div class="col-md-10">
-
             </div>
 
-            <!-- Buscar cliente -->
             <div class="col-md-3">
                 <label for="inputSearchClient" class="form-label">Buscar Cliente</label>
                 <div class="input-group">
                     <input type="text" class="form-control" id="inputSearchClient" spellcheck="false" maxlength="20">
                     <span class="input-group-text">
                         <img src="../public/img/search.png" alt="lupa" width="20">
-                    </span>                    
+                    </span>
                 </div>
-                <!-- lista de sugestoes  - estilo google -->
-                 <ul id="viewListSuggestion" class="list-group position-absolute w-100"></ul>
+                <ul id="viewListSuggestion" class="list-group position-absolute w-100"></ul>
             </div>
 
-            <!-- Id -->
             <div class="col-md-3">
                 <label for="inputIdClient" class="form-label">ID do Cliente</label>
                 <input type="text" class="form-control" id="inputIdClient" spellcheck="false" maxlength="15" disabled>
             </div>
-
-            <!-- Nome -->
             <div class="col-md-3">
                 <label for="inputNameClient" class="form-label">Nome</label>
                 <input type="text" class="form-control" id="inputNameClient" spellcheck="false" maxlength="30" disabled>
             </div>
-
-            <!-- Telefone -->
             <div class="col-md-3">
                 <label for="inputPhoneClient" class="form-label">Telefone</label>
                 <input type="text" class="form-control" id="inputPhoneClient" spellcheck="false" maxlength="15"
                     disabled>
-            </div>  
-
-            <input type="text" id="idClient"> <!-- oculto -->
-
-            <!-- Linha -->
+            </div>
+            <input type="text" id="idClient">
             <hr class="mt-4 border border-secondary border -1">
 
-            <!-- Status -->
             <div class="col-md-3">
                 <label class="form-label">Status da OS</label>
                 <select class="form-select" id="inputStatus" required>
@@ -89,69 +67,55 @@
                 </select>
             </div>
 
-            <!-- Motocicleta -->
             <div class="col-md-6">
                 <label class="form-label" for="inputMotorcycle">Motocicleta</label>
                 <input type="text" class="form-control" id="inputMotorcycle" maxlength="44" required>
             </div>
 
-            <!-- Placa -->
             <div class="col-md-3">
                 <label class="form-label" for="inputSerial">Placa</label>
                 <input type="text" class="form-control" id="inputSerial" maxlength="20">
             </div>
 
-            <!-- Problema informado -->
             <div class="col-md-7">
                 <label class="form-label" for="inputProblem">Problema Informado</label>
                 <input type="text" class="form-control" id="inputProblem" maxlength="54" required>
             </div>
 
-            <!-- Observações -->
             <div class="col-md-5">
                 <label class="form-label" for="inputObs">Observações</label>
                 <input type="text" class="form-control" id="inputObs" maxlength="35">
             </div>
 
-            <!-- Tecnico especialista -->
             <div class="col-md-3">
                 <label class="form-label" for="inputSpecialist">Mecânico de Motocicletas</label>
                 <input type="text" class="form-control" id="inputSpecialist" maxlength="20">
             </div>
 
-            <!-- Diagnóstico técnico -->
             <div class="col-md-9">
                 <label class="form-label" for="inputDiagnosis">Laudo Técnico / Serviço Executado</label>
                 <input type="text" class="form-control" id="inputDiagnosis" maxlength="60">
             </div>
 
-            <!-- Peças --->
             <div class="col-md-9">
                 <label class="form-label" for="inputParts">Troca de Peças</label>
                 <input type="text" class="form-control" id="inputParts" maxlength="60">
-            </div>             
+            </div>
 
-             <!-- Valor do serviço -->
             <div class="col-md-3">
                 <label class="form-label" for="inputTotal">Valor</label>
                 <input type="number" class="form-control" id="inputTotal" step="0.01" min="0">
             </div>
-
-            <!-- Linha <hr class="row mt-4 aling-itens-end">--> 
             <div class="mt-5 d-flex justify-content-center gap-1">
-                <button type="submit" class="btn btn-success" id="btnCreate">Gerar OS</button>                             
+                <button type="submit" class="btn btn-success" id="btnCreate">Gerar OS</button>
                 <button type="submit" class="btn btn-warning" id="btnUpdate">Editar OS</button>
-                <button type="button" class="btn btn-danger" id="btnDelete"onclick="removeOS()">Excluir OS</button>
+                <button type="button" class="btn btn-danger" id="btnDelete" onclick="removeOS()">Excluir OS</button>
                 <button type="reset" class="btn" id="btnReset" onclick="resetForm()"></button>
-                <button type="button" class="btn btn-primary" onclick="findOS()" id="btnBuscaOS">Buscar OS</button>  
+                <button type="button" class="btn btn-primary" onclick="findOS()" id="btnBuscaOS">Buscar OS</button>
                 <button type="button" class="btn btn-secondary" onclick="generateOS()">Imprimir OS</button>
-                
         </form>
     </div>
-
-    <!-- Bootstrap -->
     <script src="../public/js/bootstrap.min.js"></script>
-    <!-- renderizador -->
     <script src="../views/rendererOs.js"></script>
 </body>
 
