--- a/src/views/sobre.html
+++ b/src/views/sobre.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moto Sky - Sobre</title>
+    <title>Sobre</title>
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
     <link rel="stylesheet" href="../public/css/style.css">
     <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
 </head>
-
 <body>
     <div class="container">
         <h2 class="text-primary">Moto Sky</h2>
         <h3 class="text-secondary">Sistema para emissão de OS</h3>
         <h6>Autor: Eder Silva</h6>
         <h6>Sob a licença MIT</h6>
-        <p>Versão 1.0</p>
+        <p>Versão 2.0</p>
     </div>
     <script src="../public/js/bootstrap.min.js"></script>
 </body>
-
 </html>
